k8s/org-charts-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: org-charts-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: org-charts
  ports:
    - port: 8080
      targetPort: 8080
